--- a/LibraryService-Frontend/index.html
+++ b/LibraryService-Frontend/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>eventregistration-frontend</title>
+    <title>libraryservice-frontend</title>
   </head>
   <body>
     <div id="app"></div>
